test/fail/types.cvc
#include "civic.h"

export int main() {
    int a = 0;
    a = 7.0;
    return 0;
}
